# openapi/hurry_up_henry.yaml
@@ -1,18 +1,15 @@
-swagger: "2.0"
+openapi: 3.0.0
 info:
   description: "This is a an API definition for the Hurry Up Henry backend integration"
   version: "1.0.0"
   title: "Hurry up Henry"
   contact:
     email: "103320303@student.swin.edu.au"
-host: "127.0.0.1:8080"
-basePath: "/v1"
+servers: 
+  - url: "http://127.0.0.1:8080"
 tags:
 - name: "picar"
   description: "Everything about interacting to Rasberry Pi backend"
-schemes:
-- "https"
-- "http"
 paths:
   /car/status:
     get:
@@ -21,13 +18,110 @@ paths:
       summary: "Get the status of the car."
       description: "Gets the status of the car."
       operationId: "getCarStatus"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
       responses:
         "200":
           description: "Status response OK"
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/schemas/CarStatus"
+        "401":
+           $ref: "#/components/responses/UnauthorisedError"
+        "405":
+           description: "Invalid input"
+  /car/rotate:
+    post:
+      tags:
+      - "picar"
+      summary: "Rotates the car at an angle"
+      description: "Rotates the car at an angle"
+      operationId: "rotateCar"
+      responses:
+        "200":
+          description: "Command sent to controller successfully"
+        '401':
+           $ref: "#/components/responses/UnauthorisedError"
+        "405":
+          description: "Invalid input"
+      requestBody: 
+        content:
+          "application/json":
+            schema:
+              $ref: '#/components/schemas/Rotate'
+        
+  /car/drive:
+    post:
+      tags:
+      - "picar"
+      summary: "Drives the car forward"
+      description: "Drives the car forward"
+      operationId: "driveCar"
+      responses:
+        "200":
+          description: "Command sent to controller successfully"
+        '401':
+           $ref: "#/components/responses/UnauthorisedError"
+        "405":
+          description: "Invalid input"
+  /car/reverse:
+    post:
+      tags:
+      - "picar"
+      summary: "Drives the car backward"
+      description: "Drives the car backwards"
+      operationId: "reverseCar"
+      responses:
+        "200":
+          description: "Command sent to controller successfully"
+        '401':
+           $ref: "#/components/responses/UnauthorisedError"
         "405":
           description: "Invalid input"
 
+components:
+  schemas:
+    CarStatus:
+      type: object
+      required:
+        - name
+      properties:
+        name:
+          type: "string"
+          description: "Name of the car"
+        status:
+          type: "string"
+          description: "The car status"
+          enum:
+            - READY
+            - BUSY
+    Rotate:
+      type: object
+      required:
+        - angle
+      properties:
+        angle:
+          type: integer
+          description: "The rotation angle, must be multiple of 10 (10, 360 range)"
+          example: 90
+          multipleOf: 10
+          minimum: 10
+          maximum: 360
+
+  responses:
+    UnauthorisedError:
+      description: API key is missing or invalid
+      headers:
+        WWW_Authenticate:
+          schema:
+            type: string
+
+  securitySchemes:
+    ApiKeyAuth:        
+      type: apiKey
+      in: header       
+      name: X-API-KEY  
+
+#Apply the API key globally to all operations
+security:
+  - ApiKeyAuth: []     # use the same name as under securitySchemes
+    
