# pypicar/src/api/models/__init__.py
@@ -1,0 +1,5 @@
+# coding: utf-8
+
+# import models into model package
+from api.models.car_status import CarStatus
+from api.models.rotate import Rotate
