# pypicar/src/api/models/car_status.py
@@ -1,0 +1,97 @@
+# coding: utf-8
+
+from datetime import date, datetime
+
+from typing import List, Dict, Type
+
+from api.models.base_model_ import Model
+from api import util
+
+
+class CarStatus(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, name: str=None, status: str=None):
+        """CarStatus - a model defined in OpenAPI
+
+        :param name: The name of this CarStatus.
+        :param status: The status of this CarStatus.
+        """
+        self.openapi_types = {
+            'name': str,
+            'status': str
+        }
+
+        self.attribute_map = {
+            'name': 'name',
+            'status': 'status'
+        }
+
+        self._name = name
+        self._status = status
+
+    @classmethod
+    def from_dict(cls, dikt: dict) -> 'CarStatus':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :return: The CarStatus of this CarStatus.
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def name(self):
+        """Gets the name of this CarStatus.
+
+        Name of the car
+
+        :return: The name of this CarStatus.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name):
+        """Sets the name of this CarStatus.
+
+        Name of the car
+
+        :param name: The name of this CarStatus.
+        :type name: str
+        """
+        if name is None:
+            raise ValueError("Invalid value for `name`, must not be `None`")
+
+        self._name = name
+
+    @property
+    def status(self):
+        """Gets the status of this CarStatus.
+
+        The car status
+
+        :return: The status of this CarStatus.
+        :rtype: str
+        """
+        return self._status
+
+    @status.setter
+    def status(self, status):
+        """Sets the status of this CarStatus.
+
+        The car status
+
+        :param status: The status of this CarStatus.
+        :type status: str
+        """
+        allowed_values = ["READY", "BUSY"]  # noqa: E501
+        if status not in allowed_values:
+            raise ValueError(
+                "Invalid value for `status` ({0}), must be one of {1}"
+                .format(status, allowed_values)
+            )
+
+        self._status = status
